# PAOO

./: CMakeLists.txt
inc/: CMakeLists.txt  Dog.hpp  Treatment.hpp
inc/Animals/: Animal.hpp  Cat.hpp  Dog.hpp
src/: CMakeLists.txt  Dog.cpp  Treatment.cpp  main.cpp
src/Animals/: Animal.cpp  Cat.cpp  Dog.cpp
